--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "^4.7.0",
     "gsap": "^3.7.1",
     "jquery": "^3.6.0",
+    "luxy.js": "^0.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
