--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "font-awesome": "^4.7.0",
     "gsap": "^3.7.1",
     "jquery": "^3.6.0",
+    "lazysizes": "^5.3.2",
     "luxy.js": "^0.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
