--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react-transition-group": "^1.1.7",
     "font-awesome": "^4.7.0",
     "gsap": "^3.7.1",
     "jquery": "^3.6.0",
