--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.10",
+    "mongoose-sequence": "^5.3.1",
     "nodemon": "^2.0.13"
   }
 }
