--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = mongodb://localhost:27017/qhjv_portpolio
+DATABASE_URL1 = mongodb+srv://quanghuy978:1234@qhjv-portpolio.omvto.mongodb.net/qhjv_portfolio?retryWrites=true&w=majority
